--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -18,7 +18,7 @@
 \maketitle
 
 \section{Contact Information}
-\textbf{Address:}\\ 
+\textbf{Address:}\\
 National Center for Cognitive Behavior Therapy and Research,\\
 National Center of Neurology and Psychiatry\\
 4-1-1 Ogawa-Higashi,\\
@@ -109,16 +109,18 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., \& Shimoyama, H. (2017, September). The effect of self-monitoring application on drinking and psychological distress. Poster presented at the 39th Annual Convention of the Japanese Society of Alcohol-Related Problems, Yokohama, Japan.
 	\item \underline{Hamamura, T.}, Nakamura, A., Yoshida, S., Mearns, J., \& Shimoyama, H. (2017, September). The Effect of virtual reality facial feedback on affect and autobiographical recall: A role of negative mood regulation expectancies. Poster presented at the 81st Annual Convention of the Japanese Psychological Association, Kurume, Japan.
 	\item \underline{Hamamura, T.} (2018, September). The role of drinking quantity and alcohol expectancies as predictors of alcoholism tendency. Poster presented at the 82nd Annual Convention of the Japanese Psychological Association, Sendai, Japan.
-	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, September). Do Internet addiction types predict smartphone use among adolescents?．Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
+	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, September). Do Internet addiction types predict smartphone use among adolescents?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. (2019, September). The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
-	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan．
+	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan.
 	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. Oral presentation at IEICE General Conference 2020, online.
-	\item \underline{Hamamura, T.}, Mearns, J.（2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item \underline{Hamamura, T.}, Mearns, J. (2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September8--November 2). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
-	\item \underline{Hamamura, T.}（2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item \underline{Hamamura, T.} (2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
+	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, December). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 \end{enumerate}
 
 \section{Other Publication}
