--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -132,6 +132,8 @@ toshitaka.hamamura[@]gmail.com
 	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異なるのか？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
 	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021年9月8日～11月2日）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会.（デジタルポスター）
 	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021年12月18日）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会（口頭）
+	\item 小林\ 七彩・治徳\ 大介・中島\ 涼子・\underline{浜村\ 俊傑}・本庄\ 勝・杉原\ 玄一・高橋\ 英彦（2022年9月9日）．ネット・ゲームの問題を抱える患者と骨密度との関連．2022年度日本アルコール・アディクション医学会学術総会（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 七彩・治徳\ 大介・中島\ 涼子・高橋\ 英彦・本庄\ 勝（2022年9月9日）．スマートフォン問題使用の客観的測定にむけて：臨床データを用いた実態把握．2022年度日本アルコール・アディクション医学会学術総会（口頭）
 
 \end{enumerate}
 
