--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -64,8 +64,8 @@ thamamura[@]ncnp.go.jp\\
 \begin{itemize}
 	\item 2013--2015: \textbf{Graduate assistant}, California State University, Fullerton, Fullerton, USA (Research methods; Learning and memory; Cognitive psychology; Comparative animal bahavior)
 	\item 2017--2019: \textbf{Teaching assistant}, University of Tokyo, Tokyo, Japan (Intelligence Test)
-	\item 2019--present: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
-	\item 2021--present: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
+	\item 2019--2022: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
+	\item 2021--2022: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
 \end{itemize}
 
 \section{Publication}
@@ -100,8 +100,9 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K. and \underline{Hamamura, T.} and Honjo, M. and Yoneyama, A. and Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression.} Poster presented at International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 \end{enumerate}
 
 \subsection{Domestic Conference}
@@ -120,7 +121,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
 	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
-	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, December). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 \end{enumerate}
 
 \section{Other Publication}
@@ -129,7 +130,7 @@ thamamura[@]ncnp.go.jp\\
 		\item \underline{Hamamura, T.} (2020). Book review: Treatment for substance use disorder (Matsumoto, T., 2020). Japanese Journal of Psychotherapy, p.715
 	\end{enumerate}
 
-\section{Funded Research and Grants}
+\section{Funded Research and Grant}
 \begin{description}
 	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
 	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
@@ -158,9 +159,10 @@ thamamura[@]ncnp.go.jp\\
 \begin{itemize}
 	\item International Journal of Mental Health and Addiction (6)
 	\item Journal of Occupational Health (3)
+	\item Psychology Research and Behavior Management (1)
 \end{itemize}
 
-\section{Awards}
+\section{Award}
 	\begin{itemize}
 		\item 2010: Graduating with Distinction, Trinity Western University
 		\item 2017: The 6th Kosugi Memorial Award (Distinguished Presentation Award; Japanese Society of Alcohol-related Problems)
