--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -33,7 +33,7 @@ toshitaka.hamamura[@]gmail.com
 
 \section{職歴}
 \begin{description}
-	\item 2010年09月～2012年06月： 発達障害団体（Developmental Disabilities Association）
+	\item 2010年09月～2012年06月：Residential Care Worker, Developmental Disabilities Association
 	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
 	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　研究員
 	\item 2020年04月～現在： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
@@ -67,8 +67,8 @@ toshitaka.hamamura[@]gmail.com
 
 \section{担当したことのある科目}
 \begin{description}
-	\item 2019年09月～現在： 心理学の基礎（成蹊大学）
-	\item 2021年04月〜現在： 3年次演習（東京女子大学）
+	\item 2019年09月～2022年： 心理学の基礎（成蹊大学）
+	\item 2021年04月〜2022年： 3年次演習（東京女子大学）
 \end{description}
 
 \section{学位論文}
@@ -105,11 +105,12 @@ toshitaka.hamamura[@]gmail.com
 	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students.} Poster presented at International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor.} The 31st International Congress of Psychology, Yokohama. (Poster)
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} Poster presented at the 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K. and \underline{Hamamura, T.} and Honjo, M. and Yoneyama, A. and Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression.} Poster presented at International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 \end{enumerate}
 
 \section{国内学会・シンポジウム等における発表}
@@ -149,8 +150,6 @@ toshitaka.hamamura[@]gmail.com
 	\item 浜村\ 俊傑（2021年6月9日）．心理学を覗いてみたいあなたへ〜学問の紹介とインターネット依存のお話〜．国際基督教大学高等学校マルチイベント
 \end{enumerate}
 
-%\section{その他の活動}
-%2016年04月－2019年03月	東京大学大学院 教育学研究科 臨床心理学コース紀要係\\
 \section{競争的研究費}
 \begin{description}
 	\item 2016年05月〜2017年03月	： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響-ネガティブ気分制御期待感に着目して- (研究代表者) ¥1,500,000
@@ -167,8 +166,9 @@ toshitaka.hamamura[@]gmail.com
 
 \section{査読歴}
 	\begin{enumerate}
-	\item International Journal of Mental Health and Addiction
-	\item Journal of Occupational Health
+	\item International Journal of Mental Health and Addiction (6)
+	\item Journal of Occupational Health (3)
+	\item Psychology Research and Behavior Management (1)
 \end{enumerate}
 \section{賞罰}
 \begin{description}
