--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -122,6 +122,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
 	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
+	\item \underline{Hamamura, T.}・Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internatilizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
 \end{enumerate}
 
 \section{Other Publication}
