--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -135,7 +135,7 @@ toshitaka.hamamura[@]gmail.com
 	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021年12月18日）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会（口頭）
 	\item 小林\ 七彩・治徳\ 大介・中島\ 涼子・\underline{浜村\ 俊傑}・本庄\ 勝・杉原\ 玄一・高橋\ 英彦（2022年9月9日）．ネット・ゲームの問題を抱える患者と骨密度との関連．2022年度日本アルコール・アディクション医学会学術総会（口頭）
 	\item \underline{浜村\ 俊傑}・小林\ 七彩・治徳\ 大介・中島\ 涼子・高橋\ 英彦・本庄\ 勝（2022年9月9日）．スマートフォン問題使用の客観的測定にむけて：臨床データを用いた実態把握．2022年度日本アルコール・アディクション医学会学術総会（口頭）
-
+	\item \underline{浜村\ 俊傑}・金子\ 響介・伊藤\ 正哉（2022年11月11日）．児童・青年におけるゲーム行動症の内在化症状および家族機能との関連．第22回日本認知療法・認知行動療法学会．（口頭）
 \end{enumerate}
 
 \section{学術雑誌等又は商業誌における解説，総説}
