--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -88,6 +88,7 @@ thamamura[@]ncnp.go.jp\\
 	\item Uchimura, Y., \underline{Hamamura, T.}, Kitahara, Y., Oka, M., Suzuki, T., Kobayashi, N., \& Shimoyama, H., (2018). A Review on the population approach using Acceptance and commitment therapy: Increase of well-being and prevention effects. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 41, 34-41.
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. https://doi.org/10.31234/osf.io/2uzsd
 \end{enumerate}
 	 
 \section{Academic Presentation}
@@ -143,13 +144,14 @@ thamamura[@]ncnp.go.jp\\
 	\item 2020--2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
 	\item 2020--2023: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
 	\item 2021--2024: Grant-in-Aid for Scientific Research, Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
+	\item 2022--2023: Reiwa 4 nendo shougaisha sougou fukusi suishin jigyouhi hojyo kin, Ministry of Health, Labour and Welfare. Gyanburu tou izonshou mondai no jittai chousa no jisshi houhou no sakutei ni kakaru kentou. (Co-investigator).
 	\end{description}
 
 \section{Society Affiliation}
 \begin{itemize}
 	\item Association of Japanese Clinical Psychology
 	\item Association for Psychological Science
-	\item Japanese Medical Society of Alcohol and Addiction Studies
+	%\item Japanese Medical Society of Alcohol and Addiction Studies
 	\item Japanese Psychological Association
 	\item Japanese Society of Alcohol-Related Problems
 	%\item Research Society on Alcoholism
@@ -161,12 +163,14 @@ thamamura[@]ncnp.go.jp\\
 	\item International Journal of Mental Health and Addiction (6)
 	\item Journal of Occupational Health (3)
 	\item Psychology Research and Behavior Management (1)
+	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace (1)
 \end{itemize}
 
 \section{Award}
 	\begin{itemize}
 		\item 2010: Graduating with Distinction, Trinity Western University
-		\item 2017: The 6th Kosugi Memorial Award (Distinguished Presentation Award; Japanese Society of Alcohol-related Problems)
+		\item 2017: The 6th Kosugi Memorial Award (Distinguished Presentation Award); Japanese Society of Alcohol-related Problems.
+		\item 2021: Distinguished Presence Award, KDDI Research, Inc. (Co-investigator)
 	\end{itemize}
 
 \end{document}
