--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -25,6 +25,7 @@
 
 \noindent
 \section{現所属}
+日本学術振興会　特別研究員（PD）\\
 国立研究開発法人国立精神・神経医療研究センター　認知行動療法センター\\
 株式会社KDDI総合研究所　健康医療グループ\\~\\
 \textbf{E-mailアドレス}\\
@@ -97,6 +98,7 @@ toshitaka.hamamura[@]gmail.com
 	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
 	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. https://doi.org/10.31234/osf.io/2uzsd
 \end{enumerate}
 
 \section{国際学会・シンポジウム等における発表}
@@ -159,9 +161,10 @@ toshitaka.hamamura[@]gmail.com
 	\item 2017年10月〜2018年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
-	\item 2020年04月〜2021年03月： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
+	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
 	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
 	\item 2021年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
+	\item 2022年11月〜現在： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
 \end{description}
 
 \section{査読歴}
@@ -169,11 +172,13 @@ toshitaka.hamamura[@]gmail.com
 	\item International Journal of Mental Health and Addiction (6)
 	\item Journal of Occupational Health (3)
 	\item Psychology Research and Behavior Management (1)
+	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace (1)
 \end{enumerate}
 \section{賞罰}
 \begin{description}
-	\item 2010年05月： Graduating with Distinction, トリニティ・ウエスタン大学
-	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞
+	\item 2010年05月： Graduating with Distinction, トリニティ・ウエスタン大学（個人）
+	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞（代表）
+	\item 2021年03月： KDDI総合研究所　優秀プレゼンス章（共同）
 \end{description}
 
 \end{document}
