--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -19,11 +19,12 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\author{浜村\ 俊傑}
-\date{2022年09月24日}
+\date{2022年12月03日}
 \maketitle
 
 \noindent
+\section{氏名}
+浜村\ 俊傑（ハマムラ\ トシタカ, Hamamura, Toshitaka）
 \section{現所属}
 日本学術振興会　特別研究員（PD）\\
 国立研究開発法人国立精神・神経医療研究センター　認知行動療法センター\\
