--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -169,8 +169,9 @@ thamamura[@]ncnp.go.jp\\
 \section{Award}
 	\begin{itemize}
 		\item 2010: Graduating with Distinction, Trinity Western University
-		\item 2017: The 6th Kosugi Memorial Award (Distinguished Presentation Award); Japanese Society of Alcohol-related Problems.
+		\item 2017: The 6th Kosugi Memorial Award (Distinguished Poster Presentation Award); Japanese Society of Alcohol-related Problems.
 		\item 2021: Distinguished Presence Award, KDDI Research, Inc. (Co-investigator)
+		\item 2022: Young Scholar Outstanding Presentation Award (Oral presentation),  The 22nd Annual Convention of Japanese Association for Cognitive Therapy
 	\end{itemize}
 
 \end{document}
