--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -19,7 +19,7 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2022年12月03日}
+\date{2023年1月11日}
 \maketitle
 
 \noindent
@@ -69,8 +69,8 @@ toshitaka.hamamura[@]gmail.com
 
 \section{担当したことのある科目}
 \begin{description}
-	\item 2019年09月～2022年： 心理学の基礎（成蹊大学）
-	\item 2021年04月〜2022年： 3年次演習（東京女子大学）
+	\item 2019年09月～2022年08月： 心理学の基礎（成蹊大学）
+	\item 2021年04月〜2022年08月： 3年次演習（東京女子大学）
 \end{description}
 
 \section{学位論文}
@@ -179,7 +179,8 @@ toshitaka.hamamura[@]gmail.com
 \begin{description}
 	\item 2010年05月： Graduating with Distinction, トリニティ・ウエスタン大学（個人）
 	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞（代表）
-	\item 2021年03月： KDDI総合研究所　優秀プレゼンス章（共同）
+	\item 2021年03月： KDDI総合研究所　優秀プレゼンス賞（共同）
+	\item 2022年11月：第22回日本認知療法・	認知行動療法学会　若手優秀演題賞（一般演題）（代表）
 \end{description}
 
 \end{document}
